salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/Bouquet_Order__c.object-meta.xml
<CustomObject>
    <label>Bouquet Order</label>
    <pluralLabel>Bouquet Orders</pluralLabel>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>