salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Completed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Completed_Hours__c</fullName>
    <label>Completed Hours</label>
    <summarizedField>Bouquet_Capacity_Reservation__c.Completed_Hours__c</summarizedField>
    <summaryForeignKey>Bouquet_Capacity_Reservation__c.Bouquet_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>