salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bouquet Orders</relationshipLabel>
    <relationshipName>Bouquet_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>