salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Delivery_Charge__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charge__c</fullName>
    <label>Delivery Charge</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>