salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Gift_Message__c.field-meta.xml
<CustomField>
    <fullName>Gift_Message__c</fullName>
    <label>Gift Message</label>
    <type>TextArea</type>
</CustomField>