salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Is_Urgent__c.field-meta.xml
<CustomField>
    <fullName>Is_Urgent__c</fullName>
    <label>Is Urgent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>