salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Occasion_Date__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Date__c</fullName>
    <label>Occasion Date</label>
    <type>Date</type>
</CustomField>