salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Occasion_Type__c.field-meta.xml
<CustomField>
    <fullName>Occasion_Type__c</fullName>
    <label>Occasion Type</label>
    <type>Text</type>
    <length>100</length>
</CustomField>