salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <type>Text</type>
    <unique>true</unique>
    <length>50</length>
</CustomField>