salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Production_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Production_Deadline__c</fullName>
    <label>Production Deadline</label>
    <type>Date</type>
</CustomField>