salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>