salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours__c</fullName>
    <label>Remaining Hours</label>
    <formula>Required_Hours__c - Completed_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>