salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Required_Hours__c.field-meta.xml
<CustomField>
    <fullName>Required_Hours__c</fullName>
    <label>Required Hours</label>
    <summarizedField>Bouquet_Order_Item__c.Hours_Required__c</summarizedField>
    <summaryForeignKey>Bouquet_Order_Item__c.Bouquet_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>