salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Shipping_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Duration_Days__c</fullName>
    <label>Shipping Duration (Days)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>