salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>PENDING_REVIEW</fullName><default>true</default><label>Pending Review</label></value>
            <value><fullName>ACCEPTED</fullName><default>false</default><label>Accepted</label></value>
            <value><fullName>REJECTED</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>PAYMENT_PENDING</fullName><default>false</default><label>Payment Pending</label></value>
            <value><fullName>PAYMENT_SUBMITTED</fullName><default>false</default><label>Payment Submitted</label></value>
            <value><fullName>PAYMENT_VERIFICATION</fullName><default>false</default><label>Payment Verification</label></value>
            <value><fullName>PAYMENT_REJECTED</fullName><default>false</default><label>Payment Rejected</label></value>
            <value><fullName>CONFIRMED</fullName><default>false</default><label>Confirmed</label></value>
            <value><fullName>IN_PRODUCTION</fullName><default>false</default><label>In Production</label></value>
            <value><fullName>READY_TO_SHIP</fullName><default>false</default><label>Ready to Ship</label></value>
            <value><fullName>SHIPPED</fullName><default>false</default><label>Shipped</label></value>
            <value><fullName>DELIVERED</fullName><default>false</label><label>Delivered</label></value>
            <value><fullName>CANCELLED</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>