salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <formula>Subtotal__c + Customization_Charge__c + Delivery_Charge__c + Urgent_Order_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>