salesforce-migration/force-app/main/default/objects/Bouquet_Order__c/validationRules/Occasion_Date_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Occasion_Date_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Occasion_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Occasion Date must be in the future.</errorMessage>
</ValidationRule>